// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/notification/NotificationList when components is mounted and there is no notifications should render html correctly 1`] = `
<ul
  class="drop__list drop__list--notifications dropdown-menu"
>
   
  <notification-error-stub
    errormessage="notifications.noNotifications"
  />
</ul>
`;

exports[`components/notification/NotificationList when components is mounted and there is notifications should render html correctly 1`] = `
<ul
  class="drop__list drop__list--notifications dropdown-menu"
>
  <notification-item-stub
    notification="[object Object]"
  />
  <notification-item-stub
    notification="[object Object]"
  />
   
  <!---->
</ul>
`;

exports[`components/notification/NotificationList when components is mounted and there occurs an error while trying to retrieve the notifications should render html correctly 1`] = `
<ul
  class="drop__list drop__list--notifications dropdown-menu"
>
   
  <notification-error-stub
    errormessage="notifications.unableLoad"
  />
</ul>
`;
